src/user/include/u_entity.h

/* !!!!!!!!NOTE From here no more includes are allowed!!!!!!! */

#define u_entity(e) ((u_entity)(e))
/**
 * \brief The User Layer Entity enable method.
 *
 * This method will enable the given entity object making it fully functional.
 * This method is currently not implemented.
 *
 * \param _this The User layer Entity object where this method operates on.
 */
OS_API u_result
u_entityEnable (
    const u_entity _this);
OS_API u_bool
u_entityEnabled (
    const u_entity _this);
/**
 * \brief Returns the corresponding builtin DataReader instance handle that holds
 *        the data published for this entity.
 */
OS_API u_instanceHandle
u_entityGetInstanceHandle(
    const u_entity _this);
OS_API u_result
u_entitySetListener(
    const u_entity _this,
    u_listener listener,
    void *listenerData,
    u_eventMask interest);
/**
 * \brief The User Layer Entity Walk all related Entities method.
 *
 * This method will execute the given action method upon all kernel entities
 * owned by the kernel entity that is associated to the given User Layer
 * entity.
 * The execution of the action method is performed in a safe manner, i.e. the
 * executing thread is protected against termination and the action method is
 * protected against the deletion of the kernel entity.
 * This method will return U_RESULT_OK if all entities are successfully
 * visited. An entity is considered successfully visited if the action method
 * returns TRUE. If the action method returns FALSE the method is aborted,
 * the rest of the contained kernel entities will not be visited anymore and
 * this method will return U_RESULT_INTERRUPTED.
 * The given arg parameter is passed to the action method.
 *
 * \param _this The User layer Entity object where this method operates on.
 * \param action The action method that will be executed upon the associated
 *               Kernel Entity object.
 * \param arg The argument that will be passed to the action method upon
 *            execution.
 * \return U_RESULT_OK if all owned Kernel Entities are visited and
 *         U_RESULT_INTERRUPTED if the walk is terminated by the action
 *         method. The action method will terminate the walk when it returns
 *         FALSE.
 *
 * \note This function is DEPRECATED. It is currently still used by the C&M
 *       API, but should be removed in the future.
 */
OS_API u_result
u_entityWalkEntities (
    const u_entity _this,
    u_bool (*action)(v_entity e, void *arg),
    void *arg);
/* Like u_entityWalkEntities, this function is also DEPRECATED. It is
 * currently still used by the C&M API, but should be removed in the future.
 */
OS_API u_result
u_entityWalkDependantEntities (
    const u_entity _this,
    u_bool (*action)(v_entity e, void *arg),
    void *arg);
/* This method returns a copy of the kernel entity name that must
 * be freed using os_free when no longer needed.
 * If the name is not defined then 'No Name' is returned.
 * If an invalid entity is passed 'Invalid Entity' is returned.
 */
OS_API os_char *
u_entityName(
    const u_entity _this);
/**
 * \brief Returns a mask with the event status flags that are set since the last reset.
 *
 * This operation will not change the value of the flags.
 */
OS_API u_result
u_entityGetEventState (
    const u_entity _this,
    u_eventMask *eventState);
OS_API u_result
u_entityGetXMLQos (
    const u_entity _this,
    os_char **xml);
OS_API u_result
u_entitySetXMLQos (
    const u_entity _this,
    const os_char *xml);
OS_API u_bool
u_entityDisableCallbacks (
    const u_entity _this);
OS_API u_result
u_entityGetProperty(
    _In_ const u_entity _this,
    _In_ const os_char * name,
    _Out_ os_char ** value);
OS_API u_result
u_entitySetProperty(
    _In_ const u_entity _this,
    _In_ const os_char * name,
    _In_ const os_char * value);